# rj45-sound-card

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.en.md  README.fr.md  README.md  rjsc.toml
.github/workflows/: build-release.yml  ci.yml
deploy/: rjsc-server.service
docs/: config.md  index.en.html  index.html
man/man1/: rjsc.1
scripts/: build-release.sh  linux_setup.sh  mac_setup.sh  windows_setup.ps1
src/: gui.rs  lib.rs  main.rs
src/audio/: capture.rs  format.rs  jitter.rs  mod.rs  playback.rs  virtual_device.rs
src/client/: mod.rs
src/config/: mod.rs
src/net/: audio_stream.rs  control.rs  crypto.rs  discovery.rs  mod.rs
src/server/: mod.rs
tests/: integration.rs
