[package]
name = "rj45-sound-card"
version = "1.0.1"
edition = "2021"
description = "Network audio bridge - share any sound card over Ethernet/RJ45 across Windows, Linux, and macOS"
authors = ["RJ45 Sound Card Team"]
license = "MIT"

[[bin]]
name = "rjsc"
path = "src/main.rs"

[features]
default = ["gui"]
gui = ["dep:eframe"]

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
cpal = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
socket2 = "0.5"
toml = "0.8"
log = "0.4"
env_logger = "0.11"
anyhow = "1"
crossbeam = "0.8"
eframe = { version = "0.34", optional = true }
hex = "0.4"
crc32fast = "1"
fastrand = "2"
siphasher = "1"
